[package]
name = "kbunified"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
